@@ -1,3 +1,8 @@
+2003-06-26  Mark Page  <mpagenva@aol.com>
+
+	* nsd/adpeval.c: Fix problem where ns_adp_include was not propogating
+        errors.
+
 2003-06-25  Mark Page  <mpagenva@aol.com>
 
 	* nsd/init.tcl: (ns_eval) Fix thread-safety issue with ns_eval,
